--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Eleks Ideas PowerApps</title>
+    <title>Eleks Ideas Sandbox</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
       :root {
