--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 
       .iframe-wrapper {
         position: fixed;
-        top: 0;
+        top: 60px;
         left: 0;
         width: 100vw;
-        height: 100vh;
+        height: calc(100vh - 80px);
         overflow: hidden;
       }
 
@@ -39,7 +39,10 @@
 
       .loading {
         position: fixed;
-        inset: 0;
+        top: 60px;
+        left: 0;
+        right: 0;
+        bottom: 0;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -49,12 +52,39 @@
         opacity: 0.9;
       }
 
+      /* Top black header bar, 80px tall */
+      .top-bar {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 60px;
+        background: #000;
+        z-index: 1000;
+      }
+
       .hidden {
         display: none;
+      }
+      .header__logo
+      {
+        font-family: "Proxima Nova",Arial;
+        font-size: 44px;
+        font-weight: bold;
+        color: #ffffff;
+        line-height: 60px;
+        padding-left: 20px;
       }
     </style>
   </head>
   <body>
+    <div class="top-bar" aria-hidden="true">
+     <a class="header__logo" href="https://ideas.eleks.com">
+                <svg width="81" height="24" viewBox="0 0 81 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M8.46637 9.29038C5.5753 9.29038 4.64513 10.2582 4.64513 13.1613H12.3871C12.3871 10.2582 11.3908 9.29038 8.46637 9.29038ZM75.798 11.2293C75.798 9.6169 75.0848 9.05724 72.0639 9.05724C69.0094 9.05724 68.6027 9.55076 68.6027 11.3611C68.6027 12.7764 69.1112 13.1054 73.3885 13.4013C77.3593 13.6646 80.516 14.6521 80.516 18.3061C80.516 23.2105 77.1895 24 72.607 24C68.9083 24 64.258 23.9342 64.258 19.2275V18.3061H68.6027C68.6027 20.5762 69.4169 21.1364 71.6574 21.1364H72.9468C75.3906 21.1364 76.3743 20.4448 76.3743 18.7335C76.3743 17.2195 75.3906 16.6926 71.759 16.4958C66.9391 16.1991 64.258 15.2456 64.258 11.2959C64.258 6.9504 67.3129 6.19358 72.0297 6.19358C75.2547 6.19358 79.9385 6.32507 79.9385 10.4726C79.9385 10.6367 79.9057 10.999 79.8711 11.2293H75.798ZM50.5569 12.0147H51.7681L56.9062 5.60533H61.7398L55.1725 14.1124L62.7098 23.2258H57.6063L52.1993 16.0156H50.5569V23.2258H46.4518V0H50.5569V12.0147ZM35.563 9.29038C32.6719 9.29038 31.742 10.2582 31.742 13.1613H39.484C39.484 10.2582 38.4876 9.29038 35.563 9.29038ZM43.355 18.2405V18.8653C43.355 23.2431 40.0096 24 35.1589 24C29.1374 24 27.0969 21.7619 27.0969 15.1132C27.0969 8.53097 29.2383 6.19358 35.1931 6.19358C41.2142 6.19358 43.355 8.69457 43.355 14.6855V15.8376H31.379C31.379 20.0827 32.2157 21.0044 35.1931 21.0044C37.9022 21.0044 39.1731 20.5762 39.1731 18.6017V18.2405H43.355ZM19.3549 23.2258H24V0H19.3549V23.2258ZM16.2581 18.2405V18.8653C16.2581 23.2431 12.9131 24 8.0622 24C2.04098 24 0 21.7619 0 15.1132C0 8.53097 2.14095 6.19358 8.0959 6.19358C14.1178 6.19358 16.2581 8.69457 16.2581 14.6855V15.8376H4.28191C4.28191 20.0827 5.11843 21.0044 8.0959 21.0044C10.8054 21.0044 12.0764 20.5762 12.0764 18.6017V18.2405H16.2581Z" fill="white"></path>
+                </svg>
+            </a>(Sandbox)
+    </div>
     <div class="loading" id="loading-indicator">Loading PowerApps…</div>
     <div class="iframe-wrapper">
       <iframe
